Edited and added pictures

--- a/static/css/template-styles.css
+++ b/static/css/template-styles.css
@@ -115,7 +115,7 @@ footer {
 
 .navbar-header > .navbar-brand {
     font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
-    color: #9c27b0;
+    color: rgba(255,255,255,0.8);;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
     -moz-transition: padding .2s ease-in;
