--- a/templates/index.html
+++ b/templates/index.html
@@ -23,57 +23,45 @@
                                  <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="aaacf">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AAACF-501">
+                                        <img class="img-responsive" src="static/pictures/aaacf-501.jpg" alt="AAACF-501">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="aore">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
-                                    </a>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
-                                    <br>
-                                    <a href="#">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Facebook">
+                                        <img class="img-responsive" src="static/pictures/aore-622.jpg" alt="AORE-622">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="ecommunity">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
+                                        <img class="img-responsive" src="static/pictures/ecommunity-582.jpg" alt="ECommunity-582">
                                     </a>
                                 </div>                        
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="umclinical">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
+                                        <img class="img-responsive" src="static/pictures/umclinical-2016.jpg" alt="umclinical">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="candc">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
+                                        <img class="img-responsive" src="static/pictures/candc-2016.jpg" alt="Candc">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="dobbinIII">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                        <img class="img-responsive" src="static/pictures/dobbinIII.jpg" alt="DobbinIII">
                                     </a>
                                 </div>
-                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
-                                    <br>
-                                    <a href="#">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="WeStock">
-                                    </a>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                               <!--  <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="Forum">
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <!-- UX projects -->
@@ -82,19 +70,13 @@
                                  <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="aaacf">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AAACF-501">
+                                        <img class="img-responsive" src="static/pictures/aaacf-501.jpg" alt="AAACF-501">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="aore">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="AORE-622">
-                                    </a>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
-                                    <br>
-                                    <a href="#">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Facebook">
+                                        <img class="img-responsive" src="static/pictures/aore-622.jpg" alt="AORE-622">
                                     </a>
                                 </div>
                             </div>
@@ -105,19 +87,13 @@
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="ecommunity">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="ECommunity-582">
+                                        <img class="img-responsive" src="static/pictures/ecommunity-582.jpg" alt="ECommunity-582">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="umclinical">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="umclinical">
-                                    </a>
-                                </div>
-                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
-                                    <br>
-                                    <a href="#">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="WeStock">
+                                        <img class="img-responsive" src="static/pictures/umclinical-2016.jpg" alt="umclinical">
                                     </a>
                                 </div>
                             </div>
@@ -128,21 +104,21 @@
                                  <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="candc">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="Candc">
+                                        <img class="img-responsive" src="static/pictures/candc-2016.jpg" alt="Candc">
                                     </a>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="dobbinIII">
-                                        <img class="img-responsive" src="http://placehold.it/700x400" alt="DobbinIII">
+                                        <img class="img-responsive" src="static/pictures/dobbinIII.jpg" alt="DobbinIII">
                                     </a>
                                 </div>
-                                <div class="col-xs-12 col-sm-6 col-md-4 project-item">
+                            <!--     <div class="col-xs-12 col-sm-6 col-md-4 project-item">
                                     <br>
                                     <a href="#">
                                         <img class="img-responsive" src="http://placehold.it/700x400" alt="Forum">
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -163,24 +139,18 @@
             <div class="row">
                 <div class="col-xs-12 col-md-4 text-center">
                     <div class="feature">
-                    <!--<i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Responsive</h3> -->
                         <img class="img-responsive" src="static/pictures/gfs-logo.jpg" alt="GFS">
                         <p class="text-muted">Gordon Food Service (May,2015-Aug,2015)</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4 text-center">
                     <div class="feature">
-                    <!--<i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
-                        <h3>Customizable</h3> -->
                         <img class="img-responsive" src="static/pictures/tabuman-logo.png" alt="Tabuman">
                         <p class="text-muted">Tabuman College, UM (Aug,2015-Present)</p>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-4 text-center">
                     <div class="feature">
-                       <!--  <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Consistent</h3> -->
                         <img class="img-responsive" src="static/pictures/michr-logo.jpg" alt="MICHR">
                         <p class="text-muted">MICHR, UM (Jan,2016-Present)</p>
                     </div>
@@ -246,8 +216,8 @@
             <div class="container-fluid">
                 <div class="row no-gutter">
                     <div class="col-lg-4 col-sm-6 col-xs-12">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://splashbase.s3.amazonaws.com/unsplash/regular/photo-1430916273432-273c2db881a0%3Fq%3D75%26fm%3Djpg%26w%3D1080%26fit%3Dmax%26s%3Df047e8284d2fdc1df0fd57a5d294614d">
-                            <img src="http://placehold.it/700x400" class="img-responsive" alt="Image 1">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="static/pictures/life1.jpg">
+                            <img src="static/pictures/life1.jpg" class="img-responsive" alt="Image 1">
                             <div class="gallery-box-caption">
                                 <div class="gallery-box-content">
                                     <div>
@@ -258,8 +228,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-xs-12">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://splashbase.s3.amazonaws.com/getrefe/regular/tumblr_nqune4OGHl1slhhf0o1_1280.jpg">
-                            <img src="http://placehold.it/700x400" class="img-responsive" alt="Image 2">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="static/pictures/life2.jpg">
+                            <img src="static/pictures/life2.jpg" class="img-responsive" alt="Image 2">
                             <div class="gallery-box-caption">
                                 <div class="gallery-box-content">
                                     <div>
@@ -270,8 +240,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-xs-12">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://splashbase.s3.amazonaws.com/unsplash/regular/photo-1433959352364-9314c5b6eb0b%3Fq%3D75%26fm%3Djpg%26w%3D1080%26fit%3Dmax%26s%3D3b9bc6caa190332e91472b6828a120a4">
-                            <img src="http://placehold.it/700x400" class="img-responsive" alt="Image 3">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="static/pictures/life3.jpg">
+                            <img src="static/pictures/life3.jpg" class="img-responsive" alt="Image 3">
                             <div class="gallery-box-caption">
                                 <div class="gallery-box-content">
                                     <div>
@@ -282,8 +252,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-xs-12">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-moto-drawing-illusion-nabeel-1440x960.jpg">
-                            <img src="http://placehold.it/700x400" class="img-responsive" alt="Image 4">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="static/pictures/life4.jpg">
+                            <img src="static/pictures/life4.jpg" class="img-responsive" alt="Image 4">
                             <div class="gallery-box-caption">
                                 <div class="gallery-box-content">
                                     <div>
@@ -294,8 +264,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-xs-12">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-new-york-crosswalk-nabeel-1440x960.jpg">
-                            <img src="http://placehold.it/700x400" class="img-responsive" alt="Image 5">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="static/pictures/life5.jpg">
+                            <img src="static/pictures/life5.jpg" class="img-responsive" alt="Image 5">
                             <div class="gallery-box-caption">
                                 <div class="gallery-box-content">
                                     <div>
@@ -306,8 +276,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 col-xs-12">
-                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="https://splashbase.s3.amazonaws.com/lifeofpix/regular/Life-of-Pix-free-stock-photos-clothes-exotic-travel-nabeel-1440x960.jpg">
-                            <img src="http://placehold.it/700x400" class="img-responsive" alt="Image 6">
+                        <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="static/pictures/life6.jpg">
+                            <img src="static/pictures/life6.jpg" class="img-responsive" alt="Image 6">
                             <div class="gallery-box-caption">
                                 <div class="gallery-box-content">
                                     <div>
@@ -356,7 +326,6 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 contact-color text-center">
                     <h2 class="margin-top-0 wow fadeIn text-primary-dark">CONTACT</h2>
-                    <!-- <hr class="primary"> -->
                     <h4>Tel: +1 734-355-2122</h4>
                     <h4>Email: deanwang@umich.edu</h4>
                     <h4>I love feedback. Fill out the form below and I'll get back to you as soon as possible.</h4>
