--- a/templates/_p-base.html
+++ b/templates/_p-base.html
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <ul class="list-inline">
-                      <li><a rel="nofollow" href="https://www.linkedin.com/in/deanwong0805" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                      <li><a class="linkedin-color" rel="nofollow" href="https://www.linkedin.com/in/deanwong0805" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
                     </ul>
                 </div>
             </div>  
