--- a/templates/_base.html
+++ b/templates/_base.html
@@ -131,7 +131,7 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <ul class="list-inline">
-                      <li><a class="linkedin-color" rel="nofollow" href="https://www.linkedin.com/in/deanwong0805" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                      <li><a class="linkedin-color" rel="nofollow" href="https://www.linkedin.com/in/deanwong0805" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i>Linkedin</a></li>
                     </ul>
                 </div>
             </div>  
@@ -141,7 +141,7 @@
         <div class="modal-dialog modal-lg">
         <div class="modal-content">
         	<div class="modal-body">
-        		<img src="https://placehold.it/1200x700/222?text=..." id="galleryImage" class="img-responsive" />
+        		<img src="https://placehold.it/1200x700/222?text=..." id="galleryImage" class="img-responsive" alt="galleryModal"/>
         		<p>
         		    <br/>
         		    <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">Close <i class="ion-android-close"></i></button>
@@ -170,7 +170,7 @@
         </div>
         </div>
     </div> -->
-<!--     <div id="alertModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+   <!--  <div id="alertModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-sm">
         <div class="modal-content">
         	<div class="modal-body">
