--- a/templates/ecommunity.html
+++ b/templates/ecommunity.html
@@ -55,7 +55,8 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 sub-section">
-                    <h3>Paper Prototype (Sample login)</h3>
+                    <h3>Paper Prototype</h3>
+                    <h4>Below is just a part of the paper prototype I created. These three pictures show brief login processes including basic interactions and interface changes.</h4>
                 </div>
             </div>
             <div class="row">
@@ -73,6 +74,7 @@
             <div class="row">
                 <div class="col-xs-12 sub-section">
                     <h3>Digital Prototype</h3>
+                    <h4>To create the prototype, I used the bootstrap template for responsive front end design and javascript for basic interactions such as Login, Add to Chart and etc.</h4>
                     <a href="http://people.emich.edu/xwang16/SI582/draft/Community/public_html/">
                         <h4 style="text-align:center">(View Prototype)</h4>
                     </a>
